--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,10 @@ github_username:  flowsta
 
 # Build settings
 markdown: kramdown
+gems:
+- jekyll-mentions
+- jemoji
+- jekyll-redirect-from
+- jekyll-sitemap
+
+- jekyll-feed
